# axum-cgi

./: Cargo.toml  README.md
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
src/: lib.rs
